FEAT: controller and pundit set up for trip controller

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -10,8 +10,8 @@ $body-bg:                 $light-gray;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $mango-black;
-$primary:    $mango-yellow;
+$body-color: teal;
+$primary:    teal;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
