FEAT: added initial main page front end

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
+@import "avatar";
+@import "banner";
+@import "benefits";
+@import "body_text";
+@import "body_title";
+@import "button";
+@import "container";
+@import "file_input";
 @import "navbar";
-@import "avatar"
+@import "utility";
