--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,7 +4,7 @@
     url('<%= image_path 'california.jpg' %>')">
   <div class="banner-container">
     <div class="main-title d-flex">
-      <p>The best of solo travelling meets the best of group travel</p>
+      <p>The best of <strong>solo</strong> travelling<br>meets the best of <strong>group</strong> travel</p>
     </div>
     <% if user_signed_in? %>
       <%#= render "shared/components/button", variant: "outlined", label: "Get Started", href: itineraries_path %>
