--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,3 +10,26 @@ $green: #1EDD88;
 $gray: #0E0000;
 $mango-black:#414042;
 $light-gray: #F4F4F4;
+
+// Gray scale (order of darkest to lightest)
+$almost-black: #151515;
+$elegant-black: #212121;
+$dark-gray: #0E0000;
+$darkish-gray: #333333;
+$medium-gray: #666666;
+$gray: #bdbdbd;
+$gray-ccc: #ccc;
+$form-border-gray: #ddd;
+$lightish-gray: #F0F0F0;
+$light-gray: #F4F4F4;
+$almost-white: #FAFAFA;
+
+// Travelmates custom colour
+// Source: https://mycolor.space/?hex=%2300ADB5&sub=1
+$lighest-teal: #E6F4F1;
+$light-teal: #BEFCFF;
+$teal: #00adb5;
+$dark-teal: #007880;
+$darkest-teal: #005C71;
+$travelmate-gray: #393e46;
+$gold: #DAA520;
