--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -35,6 +35,14 @@
     padding-top: 56px;
 }
 
+// Smallest device
+@media (max-width: 575px) {
+    .page-container-home {
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+}
+
 // Featured Container
 
 .container__featured {
