--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "body_text";
 @import "body_title";
 @import "button";
+@import "card";
 @import "container";
 @import "file_input";
 @import "navbar";
