--- a/app/views/shared/cards/_location_card.html.erb
+++ b/app/views/shared/cards/_location_card.html.erb
@@ -1,15 +1,14 @@
 <div class="photo-card photo-card-location">
-    <%#= render "shared/mapstatic" %>
-    <%# if location.photo.present? %>
-        <%#= image_tag location.photo, class: "photo-card" %>
-    <%#else %>
+    <% if element.photo.present? %>
+        <%= image_tag element.photo, class: "photo-card" %>
+    <% else %>
         <%= image_tag ("https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1647&q=80"), class: "photo-card" %>
-    <%# end %>
+    <% end %>
     <div class="card-title-location">
       <p>
         <i class="fas fa-map-marker-alt pr-1"></i>
-        <%= location.city %>, <%= location.country %>
+        <%= element.city %>, <%= element.country %>
       </p>
     </div>
-    <%= link_to "", location_path(location), class: "make-card-clickable" %>
+    <%= link_to "", location_path(element), class: "make-card-clickable" %>
 </div>
