FEAT: main search partials events

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,6 +4,7 @@
         search_title: 'Find events to join',
         path: events_path,
         search_placeholder: 'Search events',
+        elements: @all_events
     }
 %>
 
