--- a/app/views/shared/search/_search_main.html.erb
+++ b/app/views/shared/search/_search_main.html.erb
@@ -24,11 +24,10 @@
             <div class="featured-title-home d-flex justify-content-between align-items-center">
                 <h4>Search results</h4>
             </div>
-
-            <div class="card__grid">
+            <div class="<%= 'card__grid' unless elements.first.class_string == 'event' %>">
                 <% if elements.any? %>
                     <% elements[0..elements.count].each do |element| %>
-                        <%= render "shared/cards/#{element.class.to_s.downcase}_card", element: element %>
+                        <%= render "shared/cards/#{element.class_string}_card", element: element %>
                     <% end %>
                 <% else %>
             </div>
