--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,6 +9,8 @@
 @import "card";
 @import "container";
 @import "file_input";
+@import "logo";
+@import "map";
 @import "navbar";
 @import "search";
 @import "utility";
