--- a/app/views/pages/_discover.html.erb
+++ b/app/views/pages/_discover.html.erb
@@ -4,7 +4,7 @@
 <div class="horizontal-page-divider"></div>
 
 <%= render 'pages/discover/discover_locations' %>
+<%= render 'pages/discover/discover_trips' %>
 
 <div class="horizontal-page-divider almost-white-background"></div>
-<%#= render 'discover_trips' %>
 
