--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,9 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-mt">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <strong>MANGO</strong>TREE
+  
+  <!-- TravelMates Logo -->
+  <%= link_to root_path, class: "navbar-brand" do %>
+    <span class="logo-start">travel</span>
+    <span id="logo-end">mates</span>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
