--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -157,6 +157,14 @@
     }
 }
 
+// Smallest device
+@media (max-width: 575px) {
+    .travel-plan-card-title {
+        padding-top: 0.2rem;
+    }
+}
+
+
 .card-text {
     font-weight: 600;
     margin-bottom: 8px;
@@ -389,7 +397,7 @@
     position: relative;
     flex: 1;
     width: 100%;
-    height: auto;
+    height: 40vh;
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
@@ -403,6 +411,10 @@
         font-size: 20px;
         font-weight: 550;
         color: $teal;
+    }
+    img {
+        // width: 100%;
+        height: 28vh;
     }
     p {
         font-size: 14px;
@@ -422,4 +434,6 @@
     font-size: 10px;
     font-weight: 400;
 }
+
+
 
