--- a/app/views/pages/discover/_discover_trips.html.erb
+++ b/app/views/pages/discover/_discover_trips.html.erb
@@ -1,23 +1,17 @@
 <div class="">
-  <!-- ITINERARY -->
+  <!-- TRIP -->
   <div class="page-container-home">
     <div class="featured-title-home d-flex justify-content-between align-items-center">
       <h2>CHECK OUT TRAVEL PLANS</h2>
       <%= link_to "See all", trips_path, class: "btn btn-outlined" %>
     </div>
-    <!-- Search bar -->
-    <!-- <div class="index-search-home justify-content-center">
-      <div class="index-search-home">
-        <%#= form_tag(itineraries_path, method: :get, placeholder: "Search") do %>
-          <%#= text_field_tag :query %>
-          <%#= submit_tag 'Search' %>
-          <%#= link_to request.path do %>
-            <i class="far fa-times-circle"></i>
-          <%# end %>
-        <%# end %>
-      </div>
-    </div> -->
 
+    <!-- Card Carousel -->
+    <div class="card__grid">
+      <% @trips.first(3).each do |trip| %>
+        <%= render 'shared/cards/trip_card', element: trip %>   
+      <% end %>
+    </div>
 
   </div>
 </div>
