--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,9 +8,11 @@
 @import "button";
 @import "card";
 @import "container";
+@import "events";
 @import "file_input";
 @import "logo";
 @import "map";
 @import "navbar";
+@import "pill";
 @import "search";
 @import "utility";
