--- a/app/views/pages/discover/_benefits.html.erb
+++ b/app/views/pages/discover/_benefits.html.erb
@@ -5,7 +5,7 @@
         <%= render partial: 'pages/discover/benefit_card',
             locals: {
                 icon: 'fa-plane',
-                text_header: 'Plan trips easily',
+                text_header: 'Plan trips with ease',
                 text_main: 'Trip planning has never been such a breeze',
                 text_button: 'Create a trip',
                 path: new_trip_path
