--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,22 +14,44 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "nav-link" %>
+        <li class="nav-item">
+          <%= link_to "EXPLORE", root_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/syrashid", class: "avatar-square dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <li class="nav-item">
+          <%= link_to "FIND MATES", events_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%#= link_to "PLAN YOUR TRIP", '#', class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%#= link_to "MANAGE TRIPS", '#', class: "nav-link" %>
+        </li>
+        
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "EXPLORE", root_path, class: "nav-link" %>
+          <%= link_to "LOGIN", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+
+      <!-- DISPLAY BUTTON && AVATAR -->
+      <% if user_signed_in? %>
+        <div class="sidebar-primary-button m-auto">
+          <%= render "shared/components/button", variant: "filled", label: "CREATE NEW TRIP", path: new_trip_path %>
+        </div>
+        <li class="nav-item dropdown px-2 m-auto">
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/sheesh19", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
+
       <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
+        <div class="sidebar-primary-button">
+          <%= render "shared/components/button", variant: "filled", label: "LOG IN", path:  new_user_session_path %>
+        </div>
       <% end %>
+
     </ul>
   </div>
 </div>
