FEAT: mapbox styling on trip show page

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -41,6 +41,11 @@
         margin-left: 2rem;
         margin-right: 2rem;
     }
+
+    .small-page-container {
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
 }
 
 // Featured Container
