FEAT: simple_calendar ajax

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -20,7 +20,7 @@
                 <% end %>
             <% end %>
         </div>
-        <div class="dash__calendar">
+        <div id="js-calendar" class="dash__calendar">
             <%= render 'calendar_locations', location_events: @location.events %>
         </div>
     </div>
