--- a/app/views/locations/show.js.erb
+++ b/app/views/locations/show.js.erb
@@ -1,2 +1,4 @@
-var locationCalendar = document.querySelector('.dash__calendar');
-locationCalendar.innerHTML = '<%= j render "locations/calendar_locations", location_events: location.events %>'
+var locationCalendar = document.querySelector('#js-calendar');
+locationCalendar.innerHTML = "<%= j render 'calendar_locations', location_events: @location.events %>"
+
+
