--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -42,7 +42,7 @@
         margin-right: 2rem;
     }
 
-    .small-page-container {
+    .small-page-container, .page-container {
         margin-left: 1rem;
         margin-right: 1rem;
     }
@@ -105,6 +105,7 @@
     grid-template-columns: 7fr 3fr;
     flex-grow: 1;
     grid-gap: 16px;
+    width: 90vw;
 }
 
 .container__event {
@@ -112,6 +113,14 @@
     grid-template-columns: 6fr 4fr;
     flex-grow: 1;
     grid-gap: 72px;
+}
+
+// Smallest device
+@media (max-width: 575px) {
+    .container__dashboard {
+        grid-template-columns: 1fr;
+        width: 100%;
+    }
 }
 
 // Empty state container
