--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -10,10 +10,10 @@
 
 <!-- Featured locations -->
 <div class="almost-white-background pt-4">
-  <%= render 'featured_location' %>
+  <%= render 'locations/by_location/featured_location' %>
 </div>
 
 <!-- ALL LOCATIONS -->
 <div>
-  <%= render 'non_featured_locations' %>
+  <%= render 'locations/by_location/non_featured_locations' %>
 </div>
