--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -5,26 +5,10 @@
     } 
 %>
 
-<%#= render 'activities_by_location', location: @location
+<%#= render 'locations/by_location/activities_by_location', location: @location
 %>
 
-<div class="page-container">
-    <div class="upcoming-event-title">
-        <h2>Upcoming events in <%= @location.city %></h2>
-    </div>
-    <div class="container__dashboard">
-    
-        <div class="display__itinerary">
-            <% @location.events.each do |event| %>
-                <% if event.start_date >= Date.today %>
-                    <%= render 'shared/cards/event_card', element: event %>
-                <% end %>
-            <% end %>
-        </div>
+<%= render 'locations/by_location/upcoming_events', location: @location %>
 
-        <div id="js-calendar" class="dash__calendar">
-            <%= render 'calendar_locations', location_events: @location.events %>
-        </div>
+<div class="page-bottom-spacer"></div>
 
-    </div>
-</div>
