FEAT: table for event list on trips page

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -8,6 +8,6 @@
     }
 %>
 
-<%= render 'featured_trips', trips: @trips %>
+<%= render 'trips/index/featured_trips', trips: @trips %>
 
-<%= render 'latest_trips', trips: @trips %>
+<%= render 'trips/index/latest_trips', trips: @trips %>
