--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -3,8 +3,8 @@
 </div>
 
 <!-- TITLE & USER BLOCKS -->
-<%= render 'trip_banner', trip: @trip %>
+<%= render 'trips/show/trip_banner', trip: @trip %>
 
-<%= render 'trip_events', trip: @trip %>
+<%= render 'trips/show/trip_events', trip: @trip %>
 
 <div class="page-bottom-spacer"></div>
