--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,9 @@
           <%= link_to "EXPLORE", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
+          <%= link_to "FIND TRIPS", trips_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "FIND MATES", events_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
