--- a/app/views/events/_grouped_events_all.html.erb
+++ b/app/views/events/_grouped_events_all.html.erb
@@ -1,6 +1,6 @@
 <!-- Upcoming events grouped by dates -->
 
-<% @all_events.group_by_month { |e| e[:start_date] }.each do |eventgroup| %>
+<% events.group_by_month { |e| e[:start_date] }.each do |eventgroup| %>
   <% if eventgroup[0] >= Date.today %>
     <h6><%= eventgroup[0].strftime("%b %Y") %></h6>
     <% eventgroup[1].each do |event| %>
