--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
+@import "approval";
 @import "avatar";
 @import "banner";
 @import "benefits";
