--- a/app/views/dashboards/show/_tabs.html.erb
+++ b/app/views/dashboards/show/_tabs.html.erb
@@ -2,7 +2,7 @@
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
       <li class="nav-item">
         <a class="active dash-inner-nav" id="pills-events-tab" data-toggle="pill" href="#pills-events" role="tab" aria-controls="pills-events" aria-selected="true">
-          Upcoming events (<%#= Event.upcomings(current_user) %>)
+          Upcoming events (<%= @user.upcoming_events.count %>)
         </a>
       </li>
       <li class="nav-item">
@@ -29,7 +29,7 @@
         <%= render 'dashboards/show/upcoming_events' %>
       </div>
       <div class="tab-pane fade" id="pills-open" role="tabpanel" aria-labelledby="pills-open-tab">
-        <%#= render 'open_listings' %>
+        <%= render 'dashboards/show/open_listings' %>
       </div>
       <div class="tab-pane fade" id="pills-favourites" role="tabpanel" aria-labelledby="pills-favourites-tab">
         <%#= render 'favorites' %>
