FEAT: initial ajax set up for event_registrations

--- a/app/assets/stylesheets/components/_approval.scss
+++ b/app/assets/stylesheets/components/_approval.scss
@@ -4,8 +4,13 @@
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
     grid-gap: 2rem;
-
+    h5 {
+        font-size: 1rem;
+        color: #00adb5;
+        font-weight: 600;
+    }
     p {
+        font-size: 0.9rem;
         margin: 0;
     }
 }
@@ -39,9 +44,6 @@
         grid-gap: 1.4rem;
         text-align: center;
         height: 100%;
-        p {
-            font-size: 0.9rem;
-        }
     }
 
     .approval-user {
