--- a/app/views/shared/components/_event_registration_row.html.erb
+++ b/app/views/shared/components/_event_registration_row.html.erb
@@ -17,9 +17,9 @@
 
     <!-- EVENT NAME -->
     <div class="table-header approval-header-sm"><p>Event</p></div>
-    <div class="reminder-details">
+    <div class="">
         <div>
-            <h5 class="reminder-details"><%= element.event.title %></h5>
+            <h5 class=""><%= element.event.title %></h5>
             <p class="display__itinerary"><%= element.event.start_date.strftime("%d %b %Y") %></p>
         </div>
     </div>
@@ -28,17 +28,20 @@
     <div class="table-header approval-header-sm"><p>Requested Date</p></div>
 
     <div class="display__itinerary">
-        <%= element.event.created_at.strftime("%d %b %Y") %>
+        <p><%= element.event.created_at.strftime("%d %b %Y") %></p>
     </div>
+
 
     <!-- STATUS -->
     <div class="table-header approval-header-sm"><p>Status</p></div>
     <div class="display__itinerary">
-        <%= element.status %>
+        <p><%= element.status %></p>
     </div>
 
+<% if policy(element).update? %>
     <!-- EXPANDABLE BUTTON -->
     <div class="expand-btn">
+        <%= link_to event_event_registration_path(element), method: :patch %>
         <a data-toggle="collapse" href="#collapseReview<%= element.id %>" role="button" aria-expanded="false" aria-controls="collapseReview<%= element.id %>"><span class="btn btn-outlined">Expand</span></a>
     </div>
 </div>
@@ -46,15 +49,16 @@
 <div id="collapseReview<%= element.id %>" class=" collapse">
     <div class="text-center">
         <%= simple_form_for [element.event, element] do |f|  %>
-        <%= f.input :status,
-            collection: EventRegistration.statuses.keys,
-            label_html: { class: "form-title mt-3 text-center" },
-            valid_class: '',
-            label: "Approve the request"
-            %>
-        <div class="data-content-cell-small text-center">
-            <%= f.submit "Save", class: "btn btn-outlined", method: :patch %>
-        </div>
+            <%= f.input :status,
+                collection: EventRegistration.statuses.keys,
+                label_html: { class: "form-title mt-3 text-center custom-control custom-switch" },
+                valid_class: '',
+                label: "Approve the request"
+                %>
+            <div class="data-content-cell-small text-center">
+                <%= f.submit "Save", class: "btn btn-outlined", method: :patch %>
+            </div>
         <% end %>
     </div>
 </div>
+<% end %>
