--- a/app/assets/stylesheets/components/_approval.scss
+++ b/app/assets/stylesheets/components/_approval.scss
@@ -2,11 +2,11 @@
     border-bottom: 0.5px solid $lightish-gray;
     height: 4.8rem;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr 2fr;
     grid-gap: 2rem;
     h5 {
         font-size: 1rem;
-        color: #00adb5;
+        color: $teal;
         font-weight: 600;
     }
     p {
