FEAT: ajax for mateup dashboard

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -17,6 +17,7 @@
 @import "navbar";
 @import "pill";
 @import "search";
+@import "sidebar";
 @import "table";
 @import "toggle";
 @import "user_block";
