--- a/app/views/dashboards/show/_tabs.html.erb
+++ b/app/views/dashboards/show/_tabs.html.erb
@@ -12,7 +12,7 @@
       </li>
       <li class="nav-item">
         <a class="dash-inner-nav" id="pills-mates-tab" data-toggle="pill" href="#pills-mates" role="tab" aria-controls="pills-mates" aria-selected="false">
-          Mate Up Requests (<%= @user.num_registered_events %>)
+          Mate up requests (<%= @user.num_registered_events %>)
         </a>
       </li>
 <!--       <li class="nav-item">
