--- a/app/views/dashboards/show/_upcoming_events.html.erb
+++ b/app/views/dashboards/show/_upcoming_events.html.erb
@@ -1,6 +1,6 @@
 <div class="itinerary">
 
-    <% if @user.events.where('Events.start_date >= ?', DateTime.now).count == 0 %>
+    <% if @events.where('Events.start_date >= ?', DateTime.now).count == 0 %>
         <div class="empty-state pt-5 pb-5 mt-5 mb-5">
             <p><strong>You have 0 travel plans</strong></p>
         </div>
@@ -9,7 +9,7 @@
             <div class="display__itinerary">
                 <%= render partial: 'shared/events/grouped_events_all', 
                     locals: { 
-                        events: @user.events,
+                        events: @events,
                         user: @user
                     }
                 %>
