--- a/app/views/shared/components/_heart.html.erb
+++ b/app/views/shared/components/_heart.html.erb
@@ -1,9 +1,9 @@
-<%# if current_user && current_user.favorited_itinerary?(itinerary) %>
-  <%#= link_to favorite_itinerary_path(current_user.find_favorite_itinerary(itinerary)), method: :delete, remote: true do %>
+<% if current_user && current_user.favorited?(element) %>
+  <%= link_to favorites_path(element, favorite: { favoritable_id: element.id, favoritable_type: element.class }), method: :patch, remote: true do %>
     <i class="fas fa-heart"></i>
-  <%# end %>
-<%# else %>
-  <%#= link_to itinerary_favorite_itineraries_path(itinerary), method: :post, remote: true do %>
-    <%# <i class="far fa-heart"></i> %>
-  <%# end %>
-<%# end %>
+  <% end %>
+<% else %>
+  <%= link_to favorites_path(element, favorite: { favoritable_id: element.id, favoritable_type: element.class }), method: :patch, remote: true do %>
+    <i class="far fa-heart"></i>
+  <% end %>
+<% end %>
