--- a/app/views/shared/components/_heart.html.erb
+++ b/app/views/shared/components/_heart.html.erb
@@ -1,9 +1,15 @@
 <% if current_user && current_user.favorited?(element) %>
   <%= link_to favorites_path(element, favorite: { favoritable_id: element.id, favoritable_type: element.class }), method: :patch, remote: true do %>
-    <i class="fas fa-heart"></i>
+    <div class="d-flex">
+      <i class="fas fa-heart mt-1"></i>
+      <p class="ml-3">Saved!</p>
+    </div>
   <% end %>
 <% else %>
   <%= link_to favorites_path(element, favorite: { favoritable_id: element.id, favoritable_type: element.class }), method: :patch, remote: true do %>
-    <i class="far fa-heart"></i>
+    <div class="d-flex">
+      <i class="far fa-heart mt-1"></i>
+      <p class="ml-3">Save</p>
+    </div>
   <% end %>
 <% end %>
