FEAT: removed underline on a tag

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,6 +12,7 @@
 @import "container";
 @import "events";
 @import "file_input";
+@import "heart";
 @import "logo";
 @import "map";
 @import "navbar";
