FEAT: ajax for mate up request on show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "approval";
 @import "avatar";
+@import "badge";
 @import "banner";
 @import "benefits";
 @import "body_text";
