--- a/app/views/events/show/_event_registrations.html.erb
+++ b/app/views/events/show/_event_registrations.html.erb
@@ -1,10 +1,10 @@
 <% if event.event_registrations.where(status: 1).present? %>
     <div class="registered-users">
     <h1>
-        Registered users ( <%= @event.event_registrations.where(status: 1).count %> )
+        Registered users ( <%= event.event_registrations.where(status: 1).count %> )
     </h1>
 
-    <% @event.event_registrations.where(status: 1).each do |regis| %>
+    <% event.event_registrations.where(status: 1).each do |regis| %>
         <div class="event-pill">
         <%= cl_image_tag regis.user.avatar, class: "avatar-small" %>
         <div class="event-pill-text">
@@ -14,3 +14,4 @@
     <% end %>
     </div>
 <% end %>
+
